# agentic-rag-for-gala-langgraph

./: .gitignore  README.md  app.py  pipeline.ipynb  pyproject.toml  rag.py  tools.py
data/examples/: chat_1.md  chat_2.md
notebooks/: pipeline.ipynb
src/: rag.py  tools.py  utils.py
src/agents/: agent.py
src/prompts/: chat_history_summary.txt  system_role_message.txt
src/tools/: rag.py  tools.py
