[tool.poetry]
name = "rag-agent-for-gala-hf"
version = "0.1.0"
description = ""
authors = ["santiagoahl <sahumadal@unal.edu.co>"]
readme = "README.md"
packages = [{include = "rag_agent_for_gala_hf"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.5.1"
langchain = "^0.3.24"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.14"
langgraph = "^0.4.0"
langgraph-prebuilt = "^0.1.8"
langchain-cli = "^0.0.36"
langchain-huggingface = "^0.1.2"
rank-bm25 = "^0.2.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
